--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,22 @@
+@import "colors.css";
+@import "typography.css";
+/*noinspection CssInvalidAtRule*/
+@import-normalize;
+
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--color-background);
+  color: var(--gray-12);
 }
 
 code {
