--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,3 +1,8 @@
+@import '@radix-ui/colors/gray.css';
+@import '@radix-ui/colors/gray-alpha.css';
+@import '@radix-ui/colors/gray-dark.css';
+@import '@radix-ui/colors/gray-dark-alpha.css';
+
 :root, .light, .light-theme {
     /* Accent Scale */
     --accent-1: #fdfdfa;
@@ -65,45 +70,12 @@
             --accent-surface: color(display-p3 0.996 0.984 0.914 / 0.8);
             --accent-indicator: oklch(91% 0.17 98.11);
             --accent-track: oklch(91% 0.17 98.11);
-
-            /* Gray    */
-            --gray-1: oklch(99.1% 0.001 277.7);
-            --gray-2: oklch(98.2% 0.003 277.7);
-            --gray-3: oklch(95.6% 0.005 277.7);
-            --gray-4: oklch(93.1% 0.006 277.7);
-            --gray-5: oklch(91% 0.008 277.7);
-            --gray-6: oklch(88.8% 0.009 277.7);
-            --gray-7: oklch(85.3% 0.012 277.7);
-            --gray-8: oklch(79.4% 0.016 277.7);
-            --gray-9: oklch(64.6% 0.016 277.7);
-            --gray-10: oklch(61% 0.016 277.7);
-            --gray-11: oklch(50.3% 0.014 277.7);
-            --gray-12: oklch(24.1% 0.01 277.7);
-
-            --gray-a1: color(display-p3 0.024 0.024 0.349 / 0.012);
-            --gray-a2: color(display-p3 0.024 0.024 0.349 / 0.024);
-            --gray-a3: color(display-p3 0.008 0.067 0.255 / 0.063);
-            --gray-a4: color(display-p3 0.012 0.051 0.216 / 0.095);
-            --gray-a5: color(display-p3 0.004 0.039 0.2 / 0.122);
-            --gray-a6: color(display-p3 0.004 0.027 0.18 / 0.153);
-            --gray-a7: color(display-p3 0.008 0.027 0.184 / 0.197);
-            --gray-a8: color(display-p3 0.004 0.031 0.176 / 0.275);
-            --gray-a9: color(display-p3 0.004 0.02 0.106 / 0.455);
-            --gray-a10: color(display-p3 0.004 0.02 0.098 / 0.499);
-            --gray-a11: color(display-p3 0 0.008 0.059 / 0.616);
-            --gray-a12: color(display-p3 0 0.004 0.027 / 0.883);
-
-            --gray-contrast: #FFFFFF;
-            --gray-surface: color(display-p3 1 1 1 / 80%);
-            --gray-indicator: oklch(64.6% 0.016 277.7);
-            --gray-track: oklch(64.6% 0.016 277.7);
-
         }
     }
 }
 
 :root, .light, .light-theme, .radix-themes {
-    --color-background: #fff;
+    --color-background: var(--gray-3);
 }
 
 .dark, .dark-theme {
@@ -138,40 +110,6 @@
     --accent-surface: #231f0e80;
     --accent-indicator: #ffe140;
     --accent-track: #ffe140;
-
-
-    /*  Gray Scale*/
-    --gray-1: #111113;
-    --gray-2: #19191b;
-    --gray-3: #222325;
-    --gray-4: #292a2e;
-    --gray-5: #303136;
-    --gray-6: #393a40;
-    --gray-7: #46484f;
-    --gray-8: #5f606a;
-    --gray-9: #6c6e79;
-    --gray-10: #797b86;
-    --gray-11: #b2b3bd;
-    --gray-12: #eeeef0;
-
-    --gray-a1: #1111bb03;
-    --gray-a2: #cbcbf90b;
-    --gray-a3: #d6e2f916;
-    --gray-a4: #d1d9f920;
-    --gray-a5: #d7ddfd28;
-    --gray-a6: #d9defc33;
-    --gray-a7: #dae2fd43;
-    --gray-a8: #e0e3fd60;
-    --gray-a9: #e0e4fd70;
-    --gray-a10: #e3e7fd7e;
-    --gray-a11: #eff0feb9;
-    --gray-a12: #fdfdffef;
-
-    --gray-contrast: #FFFFFF;
-    --gray-surface: rgba(0, 0, 0, 0.05);
-    --gray-indicator: #6c6e79;
-    --gray-track: #6c6e79;
-
 }
 
 @supports (color: color(display-p3 1 1 1)) {
@@ -208,38 +146,6 @@
             --accent-surface: color(display-p3 0.125 0.118 0.059 / 0.5);
             --accent-indicator: oklch(90.9% 0.17 98.11);
             --accent-track: oklch(90.9% 0.17 98.11);
-
-            /*    Gray Scale */
-            --gray-1: oklch(17.8% 0.004 277.7);
-            --gray-2: oklch(21.5% 0.004 277.7);
-            --gray-3: oklch(25.5% 0.005 277.7);
-            --gray-4: oklch(28.4% 0.008 277.7);
-            --gray-5: oklch(31.4% 0.009 277.7);
-            --gray-6: oklch(35% 0.01 277.7);
-            --gray-7: oklch(40.2% 0.012 277.7);
-            --gray-8: oklch(49.2% 0.016 277.7);
-            --gray-9: oklch(54% 0.017 277.7);
-            --gray-10: oklch(58.6% 0.016 277.7);
-            --gray-11: oklch(77% 0.014 277.7);
-            --gray-12: oklch(94.9% 0.003 277.7);
-
-            --gray-a1: color(display-p3 0.067 0.067 0.941 / 0.009);
-            --gray-a2: color(display-p3 0.8 0.8 0.98 / 0.043);
-            --gray-a3: color(display-p3 0.851 0.898 0.988 / 0.085);
-            --gray-a4: color(display-p3 0.839 0.871 1 / 0.122);
-            --gray-a5: color(display-p3 0.847 0.875 1 / 0.156);
-            --gray-a6: color(display-p3 0.878 0.898 1 / 0.194);
-            --gray-a7: color(display-p3 0.875 0.906 0.996 / 0.257);
-            --gray-a8: color(display-p3 0.894 0.906 1 / 0.37);
-            --gray-a9: color(display-p3 0.89 0.91 1 / 0.433);
-            --gray-a10: color(display-p3 0.902 0.918 1 / 0.488);
-            --gray-a11: color(display-p3 0.945 0.949 1 / 0.719);
-            --gray-a12: color(display-p3 0.992 0.992 1 / 0.937);
-
-            --gray-contrast: #FFFFFF;
-            --gray-surface: color(display-p3 0 0 0 / 5%);
-            --gray-indicator: oklch(54% 0.017 277.7);
-            --gray-track: oklch(54% 0.017 277.7);
         }
     }
 }
