--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,22 +1,22 @@
+@import "variables.css";
 @import "colors.css";
 @import "typography.css";
-/*noinspection CssInvalidAtRule*/
-@import-normalize;
+@import "normalise.css";
 
-html {
+html, body, div#root {
   height: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', sans-serif;
+  font-feature-settings: normal;
+  font-variation-settings: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--color-background);
   color: var(--gray-12);
+  font-size: var(--fs-base);
 }
 
 code {
