--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,120 @@ body {
   font-size: var(--fs-base);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main.wrapper {
+  padding-block: 4.25rem 2.25rem;
+  padding-inline: 1.25rem;
+  height: 85%;
+
+  div.container {
+    display: grid;
+    height: 100%;
+    grid-template-columns: minmax(25%, 270px) 1fr;
+    max-width: 1280px;
+    margin-inline: auto;
+    border-radius: var(--rounded-xl);
+    overflow: clip;
+    box-shadow: var(--shadow);
+
+    .current-section {
+      display: flex;
+      flex-direction: column;
+      padding-block: 2.75rem 1.75rem;
+      padding-inline: 2.25rem 1.75rem;
+      background-color: white;
+
+
+      .skeleton {
+        margin-top: 1rem;
+        height: 100%;
+
+        & > * {
+          animation: var(--animate-pulse);
+          background: var(--gray-1);
+          border-radius: var(--rounded-xl);
+          box-shadow: var(--shadow);
+        }
+
+        & * + * {
+          margin-top: 2rem;
+        }
+
+        & :nth-child(1) {
+          height: 45px;
+        }
+
+        & :nth-child(2) {
+          height: 200px;
+        }
+
+        & :nth-child(3) {
+          height: 150px;
+        }
+      }
+
+
+      .location-title {
+        display: flex;
+        align-items: center;
+        color: var(--gray-12);
+
+        .location-icon {
+          color: var(--gray-11);
+          width: 1.125rem;
+          height: 1.125rem;
+          margin-right: 2px;
+        }
+      }
+
+      .current-weather-date {
+        color: var(--gray-11);
+      }
+
+      .weather-info {
+        display: flex;
+        flex-direction: column;
+
+        img.icon {
+          margin-top: 1rem;
+          background-color: var(--blue-1);
+          border-radius: var(--rounded-xl);
+          overflow: clip;
+          width: 100%;
+        }
+
+        .temperature {
+          margin-top: 1.25rem;
+          text-align: center;
+          font-size: var(--fs-xxxl);
+        }
+
+        .description {
+          font-size: var(--fs-base);
+          text-align: center;
+
+          .temps{
+            margin-left: .5rem;
+            color: var(--gray-9);
+          }
+        }
+      }
+
+      .last-updated-at {
+        margin-top: auto;
+        font-size: var(--fs-sm);
+        color: var(--gray-11);
+
+        time {
+          margin-left: .25rem;
+        }
+      }
+    }
+
+    .detailed-section {
+      padding-inline: 1.75rem;
+      padding-block: 2rem;
+      background-color: var(--gray-1);
+    }
+  }
 }
+
