--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,135 +4,233 @@
 @import "normalise.css";
 
 html, body, div#root {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', sans-serif;
-  font-feature-settings: normal;
-  font-variation-settings: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: var(--color-background);
-  color: var(--gray-12);
-  font-size: var(--fs-base);
+    font-feature-settings: normal;
+    font-variation-settings: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: var(--color-background);
+    color: var(--gray-12);
+    font-size: var(--fs-base);
+}
+
+.scroll-area {
+    position: relative;
+    overflow: hidden;
+
+    .viewport {
+        height: 100%;
+        width: 100%;
+        border-radius: inherit;
+    }
+
+    .scroll-bar {
+        display: flex;
+        touch-action: none;
+        user-select: none;
+        transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 150ms;
+        padding: 1px;
+        border-color: transparent;
+
+        &[data-orientation='vertical'] {
+            height: 100%;
+            width: .625rem;
+            border-left-width: 1px;
+        }
+
+        &[data-orientation='horizontal'] {
+            height: .625rem;
+            border-top-width: 1px;
+        }
+
+        .scroll-area-thumb {
+            position: relative;
+            flex: 1 1 0;
+            background-color: var(--gray-5);
+            border-radius: var(--rounded-full);
+        }
+    }
 }
 
 main.wrapper {
-  padding-block: 4.25rem 2.25rem;
-  padding-inline: 1.25rem;
-  height: 85%;
+    padding-block: 4.25rem 2.25rem;
+    padding-inline: 1.25rem 1rem;
+    height: 95%;
 
-  div.container {
-    display: grid;
-    height: 100%;
-    grid-template-columns: minmax(25%, 270px) 1fr;
-    max-width: 1280px;
-    margin-inline: auto;
-    border-radius: var(--rounded-xl);
-    overflow: clip;
-    box-shadow: var(--shadow);
-
-    .current-section {
-      display: flex;
-      flex-direction: column;
-      padding-block: 2.75rem 1.75rem;
-      padding-inline: 2.25rem 1.75rem;
-      background-color: white;
-
-
-      .skeleton {
-        margin-top: 1rem;
+    div.container {
+        display: grid;
         height: 100%;
+        grid-template-columns: minmax(25%, 270px) 1fr;
+        max-width: 1280px;
+        margin-inline: auto;
+        border-radius: var(--rounded-xl);
+        overflow: clip;
+        box-shadow: var(--shadow);
 
-        & > * {
-          animation: var(--animate-pulse);
-          background: var(--gray-1);
-          border-radius: var(--rounded-xl);
-          box-shadow: var(--shadow);
+        .current-section {
+            display: flex;
+            flex-direction: column;
+            padding-block: 2.75rem 1.75rem;
+            padding-inline: 2.25rem 1.75rem;
+            background-color: white;
+
+
+            .skeleton {
+                margin-top: 1rem;
+                height: 100%;
+
+                & > * {
+                    animation: var(--animate-pulse);
+                    background: var(--gray-1);
+                    border-radius: var(--rounded-xl);
+                    box-shadow: var(--shadow);
+                }
+
+                & * + * {
+                    margin-top: 2rem;
+                }
+
+                & :nth-child(1) {
+                    height: 45px;
+                }
+
+                & :nth-child(2) {
+                    height: 200px;
+                }
+
+                & :nth-child(3) {
+                    height: 150px;
+                }
+            }
+
+
+            .location-title {
+                display: flex;
+                align-items: center;
+                color: var(--gray-12);
+
+                .location-icon {
+                    color: var(--gray-11);
+                    width: 1.125rem;
+                    height: 1.125rem;
+                    margin-right: 2px;
+                }
+            }
+
+            .current-weather-date {
+                color: var(--gray-11);
+            }
+
+            .weather-info {
+                display: flex;
+                flex-direction: column;
+
+                img.icon {
+                    margin-top: 1rem;
+                    background-color: var(--blue-1);
+                    border-radius: var(--rounded-xl);
+                    overflow: clip;
+                    width: 100%;
+                }
+
+                .temperature {
+                    margin-top: 1.25rem;
+                    text-align: center;
+                    font-size: var(--fs-xxxl);
+                }
+
+                .description {
+                    font-size: var(--fs-base);
+                    text-align: center;
+
+                    .temps {
+                        margin-left: .5rem;
+                        color: var(--gray-9);
+                    }
+                }
+            }
+
+            .last-updated-at {
+                margin-top: auto;
+                font-size: var(--fs-sm);
+                color: var(--gray-11);
+
+                time {
+                    margin-left: .25rem;
+                }
+            }
         }
 
-        & * + * {
-          margin-top: 2rem;
+        .detailed-section {
+            padding-inline: 1.75rem;
+            padding-block: 2rem;
+            background-color: var(--gray-1);
+            width: 100%;
+
+            .day-summary {
+                margin-top: 1rem;
+                padding: .5rem 1rem;
+                max-width: 85%;
+                border-radius: var(--rounded-lg);
+                background-color: var(--accent-surface);
+                box-shadow: inset 0 0 0 1px var(--accent-a7);
+                color: var(--accent-a11);
+                font-size: var(--fs-sm);
+
+                h2 {
+                    font-weight: 600;
+                }
+
+                &:has(div.skeleton) {
+                    animation: var(--animate-pulse);
+                    height: 40px;
+                }
+            }
+
+            section.week-forecast {
+                margin-top: 1.125rem;
+                width: 100%;
+
+                .title {
+                    font-weight: 600;
+                    color: var(--gray-12);
+                    font-size: var(--fs-sm);
+                }
+
+                .days-container-root {
+                    /*width: 100%;*/
+                }
+
+                .days-container {
+                    width: 100%;
+                    padding-bottom: .75rem;
+                    margin-top: .75rem;
+                    display: grid;
+                    grid-template-columns: repeat(7, minmax(115px, 1fr));
+                    gap: .5rem;
+
+                    .day-card {
+                        aspect-ratio: 9/10;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        background: white;
+                        border-radius: var(--rounded-xl);
+                        box-shadow: var(--shadow);
+                        overflow: clip;
+                        padding: .5rem 1rem;
+                        font-size: var(--fs-sm);
+                    }
+                }
+            }
         }
-
-        & :nth-child(1) {
-          height: 45px;
-        }
-
-        & :nth-child(2) {
-          height: 200px;
-        }
-
-        & :nth-child(3) {
-          height: 150px;
-        }
-      }
-
-
-      .location-title {
-        display: flex;
-        align-items: center;
-        color: var(--gray-12);
-
-        .location-icon {
-          color: var(--gray-11);
-          width: 1.125rem;
-          height: 1.125rem;
-          margin-right: 2px;
-        }
-      }
-
-      .current-weather-date {
-        color: var(--gray-11);
-      }
-
-      .weather-info {
-        display: flex;
-        flex-direction: column;
-
-        img.icon {
-          margin-top: 1rem;
-          background-color: var(--blue-1);
-          border-radius: var(--rounded-xl);
-          overflow: clip;
-          width: 100%;
-        }
-
-        .temperature {
-          margin-top: 1.25rem;
-          text-align: center;
-          font-size: var(--fs-xxxl);
-        }
-
-        .description {
-          font-size: var(--fs-base);
-          text-align: center;
-
-          .temps{
-            margin-left: .5rem;
-            color: var(--gray-9);
-          }
-        }
-      }
-
-      .last-updated-at {
-        margin-top: auto;
-        font-size: var(--fs-sm);
-        color: var(--gray-11);
-
-        time {
-          margin-left: .25rem;
-        }
-      }
     }
-
-    .detailed-section {
-      padding-inline: 1.75rem;
-      padding-block: 2rem;
-      background-color: var(--gray-1);
-    }
-  }
 }
 
