ui: highlight reel cards with good enough design

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -147,6 +147,7 @@ main.wrapper {
                 }
 
                 .description {
+                    text-transform: capitalize;
                     font-size: var(--fs-base);
                     text-align: center;
 
@@ -176,7 +177,7 @@ main.wrapper {
 
             .day-summary {
                 margin-top: 1rem;
-                padding: .5rem 1rem;
+                padding: .75rem 1.25rem;
                 max-width: 85%;
                 border-radius: var(--rounded-lg);
                 background-color: var(--accent-surface);
@@ -190,7 +191,15 @@ main.wrapper {
 
                 &:has(div.skeleton) {
                     animation: var(--animate-pulse);
-                    height: 40px;
+                    height: 50px;
+                }
+            }
+
+            .section {
+                & > h2.title {
+                    font-weight: 600;
+                    color: var(--gray-12);
+                    font-size: var(--fs-sm);
                 }
             }
 
@@ -198,11 +207,22 @@ main.wrapper {
                 margin-top: 1.125rem;
                 width: 100%;
 
-                .title {
-                    font-weight: 600;
-                    color: var(--gray-12);
-                    font-size: var(--fs-sm);
+                .skeleton {
+                    margin-top: .75rem;
+                    display: grid;
+                    grid-template-columns: repeat(7, minmax(115px, 1fr));
+                    gap: .5rem;
+
+                    & > * {
+                        animation: var(--animate-pulse);
+                        aspect-ratio: 9/10;
+                        background: var(--blue-1);
+                        border-radius: var(--rounded-xl);
+                        box-shadow: var(--shadow);
+                        overflow: clip;
+                    }
                 }
+
 
                 .days-container-root {
                     /*width: 100%;*/
@@ -227,6 +247,98 @@ main.wrapper {
                         overflow: clip;
                         padding: .5rem 1rem;
                         font-size: var(--fs-sm);
+
+                        .temps > .min {
+                            color: var(--gray-11);
+                        }
+                    }
+                }
+            }
+
+            section.highlights {
+                margin-top: 1.5rem;
+
+                .skeleton {
+                    margin-top: .75rem;
+                    display: grid;
+                    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+                    gap: 1.25rem;
+
+                    & > * {
+                        height: 135px;
+                        animation: var(--animate-pulse);
+                        background: var(--blue-1);
+                        border-radius: var(--rounded-xl);
+                        box-shadow: var(--shadow);
+                        overflow: clip;
+                    }
+                }
+
+                .highlights-container {
+                    margin-top: .75rem;
+                    display: grid;
+                    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+                    gap: 1.25rem;
+
+                    .card {
+                        background-color: white;
+                        box-shadow: var(--shadow);
+                        border-radius: var(--rounded-xl);
+                        padding: 1rem 1.25rem;
+                        display: flex;
+                        flex-direction: column;
+
+                        .card-title {
+                            font-size: var(--fs-sm);
+                            color: var(--gray-11);
+                        }
+
+                        .card-content {
+                            flex: 1 1 0;
+
+                            .metric-value {
+                                font-size: var(--fs-xl);
+                            }
+                        }
+
+                        .comment {
+                            font-size: var(--fs-sm);
+                        }
+
+                        &.wind-status {
+                            .comment {
+                                font-size: var(--fs-base);
+                                display: flex;
+                                align-items: center;
+                            }
+
+                            .compass-icon {
+                                margin-right: .5rem;
+                                border: 1px solid var(--gray-12);
+                                border-radius: var(--rounded-full);
+                                color: var(--blue-9);
+                                padding: 2px;
+                                width: 1.625rem;
+                                height: 1.625rem;
+
+                                svg {
+                                    transform: rotate(45deg);
+                                    width: 100%;
+                                    height: 100%;
+                                }
+                            }
+                        }
+
+                        &.sunrise-sunset .card-content {
+                            padding-top: .75rem;
+                            & > * {
+                                display: flex;
+
+                                span:nth-child(1) {
+                                    margin-right: .5rem;
+                                }
+                            }
+                        }
                     }
                 }
             }
