--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -153,5 +153,5 @@
 }
 
 .dark, .dark-theme, :is(.dark, .dark-theme) :where(.radix-themes:not(.light, .light-theme)) {
-    --color-background: #111;
+    --color-background: var(--gray-3);
 }
